@@ -12,6 +12,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven-surefire-plugin.suiteXmlFile>${project.build.testOutputDirectory}/testng/hw1-all-tests.xml</maven-surefire-plugin.suiteXmlFile>
         <testng.version>7.4.0</testng.version>
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
         <calculator.version>1.0</calculator.version>
@@ -47,11 +48,13 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj-core.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>${selenium-java.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
@@ -87,10 +90,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                    </argLine>
                   <suiteXmlFiles>
                     <suiteXmlFile>${maven-surefire-plugin.suiteXmlFile}</suiteXmlFile>
                   </suiteXmlFiles>
@@ -142,10 +141,15 @@
             <properties>
                 <maven-surefire-plugin.suiteXmlFile>${project.build.testOutputDirectory}/testng/hw4-all-tests.xml</maven-surefire-plugin.suiteXmlFile>
             </properties>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
         </profile>
+        <profile>
+            <id>hw5-profile-all-test</id>
+            <properties>
+                <maven-surefire-plugin.suiteXmlFile>${project.build.testOutputDirectory}/testng/hw5-all-tests.xml</maven-surefire-plugin.suiteXmlFile>
+            </properties>
+            <activation><activeByDefault>true</activeByDefault></activation>
+        </profile>
+
     </profiles>
 
     <reporting>
